# fumo_engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists5.txt  README.md  build.zig  build.zig.zon  clay_stuff.c  debug_build.sh  debug_build_ninja.sh  nvidia_run.sh  release_build.sh  release_run.sh  run_ninja.sh  start_project.sh
.zig/: symbolspatch.patch
assets/Pixel Prototype Player/: Readme.txt
assets/Pixel Prototype Player/Sprites/: PlayerFishingSheet.json
backup_serialized_data/level0/: screen0.json
backup_serialized_data/level1/: screen0.json
make_scripts/: release_build.sh  run.sh
serialized_data/level0/: screen0.json
serialized_data/level1/: screen0.json
src/: [Preview]  constants.hpp  fumo_raylib.cpp  fumo_raylib.hpp  fumo_serialize_macros.hpp  include_systems.hpp  initialization.cpp  initialization.hpp  main.cpp  main_functions.cpp  main_functions.hpp  register_sprites.cpp  register_to_ecs.cpp  testing_ecs.cpp
src/constants/: constants.hpp  direction_constants.hpp  engine_constants.hpp  fumo_raylib_constants.hpp  movement_constants.hpp  planet_constants.hpp
src/fumo_engine/: ECS.hpp  all_components_macro.hpp  component_array.hpp  component_manager.hpp  components.hpp  engine_constants.hpp  entity_manager.hpp  entity_query.cpp  entity_query.hpp  event_components.hpp  event_manager.hpp  flag_components.hpp  fumo_containers.hpp  global_state.cpp  global_state.hpp  notes_for_the_level_editor.md  scheduler_ecs.hpp  scheduling_systems.hpp  screen_components.hpp  system_base.hpp  system_manager.hpp  timer_systems.cpp
src/fumo_engine/collisions_and_physics/: bad_unused_circle_collisions.cpp  collision_functions.hpp  collision_runner.cpp  collision_runner.hpp  continous_collisions.cpp  gravity_buffer.cpp  gravity_field_systems.cpp  gravity_field_systems.hpp  gravity_physics.hpp  gravity_update.cpp  gravity_update_and_buffer.cpp  line_circle_collisions.cpp  line_rect_collisions.cpp  player_collisions.cpp  player_collisions.hpp  point_line_collisions.cpp  point_line_collisions.hpp  rect_circle_collisions.cpp
src/fumo_engine/core/: ECS.hpp  component_array.hpp  component_manager.hpp  engine_constants.hpp  entity_manager.hpp  entity_query.cpp  entity_query.hpp  fumo_containers.hpp  fumo_engine.cpp  fumo_engine.hpp  global_state.cpp  global_state.hpp  scheduler_ecs.cpp  scheduler_ecs.hpp  scheduling_systems.hpp  setup_fumo_engine.cpp  system_base.hpp  system_manager.hpp  timer_systems.cpp
src/fumo_engine/events/: collided_event.cpp  dash_state_handler.cpp  event_functions.cpp  event_handler_functions.cpp  event_handlers.cpp  event_state_handlers.hpp  jump_state_handler.cpp  movement_state_handler.cpp  state_handlers.cpp
src/fumo_engine/level_editor/: entity_creation.cpp  hardcoded_level0.cpp  level_editor.hpp  parse_input.cpp  resizing_moving.cpp  screen_handler.cpp  screen_handler.hpp  screen_transition_handler.cpp  selection_handling.cpp
src/fumo_engine/level_systems/: fumo_serializer.cpp  fumo_serializer.hpp  hardcoded_level0.cpp  input_handling_systems.hpp  input_level_editor.cpp  input_level_editor.hpp  level_editor.hpp  level_editor_input.cpp  level_editor_temp.hpp  level_manager.cpp  level_manager.hpp  screen_handler.cpp  screen_handler.hpp
src/fumo_engine/notes/: tasks_for_today.md  useful_commands.txt
src/fumo_engine/serialization/: fumo_serializer.cpp  fumo_serializer.hpp
src/fumo_engine/sprite_animation_manager/: animation_player.cpp  animation_renderers.cpp  sprite_and_animation_systems.hpp
src/fumo_engine/sprite_manager/: animation_player.cpp  animation_renderers.cpp  sprite_and_animation_systems.hpp  sprite_and_texture_systems.hpp  sprite_systems.cpp
src/objects/: body_movement.cpp  components.hpp  debugger.cpp  entity_factory.cpp  factory_systems.hpp  fumo_containers.hpp  handle_input.cpp  input_handling_systems.hpp  level_editor_input.cpp  new_level_editor.cpp  physics_systems.cpp  physics_systems.hpp  planet_factory.cpp  planet_renderer.cpp  player_collisions.cpp  player_collisions.hpp  player_physics.cpp  player_physics.hpp  renderer.cpp  renderers.hpp  scheduling_systems.hpp  systems.hpp  utility_systems.cpp
src/objects/factory_systems/: circular_planets.cpp  factory_systems.hpp  planet_factory.cpp  rect_planets.cpp
src/objects/generic_systems/: body_movement.cpp  factory_systems.hpp  planet_factory.cpp  systems.hpp  utility_systems.cpp
src/objects/level_systems/: hardcoded_level0.cpp  input_handling_systems.hpp  level_editor_input.cpp
src/objects/player_systems/: body_movement.cpp  gravity_buffer.cpp  gravity_field_systems.cpp  player_collisions.cpp  player_collisions.hpp  player_general_systems.cpp  player_general_systems.hpp  player_gravity.cpp  player_initializer.cpp  player_input.cpp  player_physics.cpp  player_physics.hpp  player_renderer.hpp
src/objects/rendering_systems/: all_components_renderer.cpp  animation_renderers.cpp  component_renderer.hpp  draw_components.cpp  global_renderer.cpp  object_renderer.cpp  planet_renderer.cpp  render_components.cpp  renderers.hpp  rendering_systems.cpp  some.cpp
windows_stuff/: run.bat
